# basic-risc-v-simulate

basic_simulation_32I/: CMakeLists.txt  InputManager.cpp  InputManager.h  OutputManager.cpp  OutputManager.h  RISC_V_32I.h  Simulation.h  main.cpp
basic_simulation_32I/Executors32I/: B32Executor.cpp  B32Executor.h  I32Executor.cpp  I32Executor.h  J32Executor.cpp  J32Executor.h  R32Executor.cpp  R32Executor.h  S32Executor.cpp  S32Executor.h  U32Executor.cpp  U32Executor.h
basic_simulation_32I/Formats32I/: B32Format.cpp  B32Format.h  I32Format.cpp  I32Format.h  J32Format.cpp  J32Format.h  R32Format.cpp  R32Format.h  R32Format.h.gch  S32Format.cpp  S32Format.h  U32Format.cpp  U32Format.h
basic_simulation_32I/Include/: BinaryUtils.cpp  BinaryUtils.h  ExecutionEnvironment.cpp  ExecutionEnvironment.h  Executor.h  ExecutorFactory.cpp  ExecutorFactory.h  Format.h  InstructionBits.cpp  InstructionBits.h  Memory.cpp  Memory.h  Registers.cpp  Registers.h  RiscVCore.h  RiscVException.h  TrapHandler.cpp  TrapHandler.h  Utilities.cpp  Utilities.h
basic_simulation_32I/Instructions32I/: Instructions32I_B.cpp  Instructions32I_B.h  Instructions32I_I.cpp  Instructions32I_I.h  Instructions32I_J.cpp  Instructions32I_J.h  Instructions32I_R.cpp  Instructions32I_R.h  Instructions32I_S.cpp  Instructions32I_S.h  Instructions32I_U.cpp  Instructions32I_U.h
testing_environment/: CMakeLists.txt  DirectoryManager.cpp  DirectoryManager.h  ExpectedData.cpp  ExpectedData.h  OUTReader.cpp  OUTReader.h  OutData.cpp  OutData.h  ReadMode.cpp  ReadMode.h  ReaderBase.cpp  ReaderBase.h  TestComparator.cpp  TestComparator.h  TestFilePair.cpp  TestFilePair.h  TestResult.cpp  TestResult.h  TestTracker.cpp  TestTracker.h  XPCTReader.cpp  XPCTReader.h  main.cpp
tests/: add_large_overflow.in  add_large_overflow.xpct  add_negative.in  add_positive.in  add_positives_with_nop_forwarding.in  add_to_x0.in  add_to_x0.xpct  add_to_x10.in  add_to_x10.xpct  branch_many.in  branch_with_neg.in  branch_with_nop_forwarding.in  loop.in  shift.in  store_load_stack.in  store_load_with_nop_forwarding.in
